# devgames2024

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bootstrap_windows.bat  generate_project.bat
data/: do_not_delete.txt
data/shaders/: debug_line.frag  debug_line_2d_cpu.vert  debug_line_cpu.vert  fullscreen_triangle.vert  platform.h  test.comp  test.vert
data/shaders/atmospheric_scattering/: aerial_perspective.comp  definitions.glsl  functions.glsl  multi_scattering.comp  sky_apply.frag  sky_common.h  sky_lut.comp  transmittance_lut.comp
data/shaders/debug_print/: debug_gpu_font.frag  debug_gpu_font.h  debug_gpu_font.vert  debug_gpu_text_dispatch.comp
data/shaders/ocean_bruneton/: common.h  ocean.frag  ocean.h  ocean.vert  skymap.comp
source/devgames_2024/: main.cpp
source/idra/application/: application.cpp  application.hpp  game_camera.cpp  game_camera.hpp  window.cpp  window.hpp
source/idra/game/: ui_render_system.cpp  ui_render_system.hpp
source/idra/gameplay/: type_writer.cpp  type_writer.hpp
source/idra/gpu/: command_buffer.cpp  command_buffer.hpp  gpu_device.hpp  gpu_device_vulkan.cpp  gpu_enums.hpp  gpu_profiler.cpp  gpu_profiler.hpp  gpu_resources.cpp  gpu_resources.hpp  idra_imgui.cpp  idra_imgui.hpp  vulkan_forward_declarations.hpp
source/idra/graphics/: atmospheric_scattering.cpp  atmospheric_scattering.hpp  crt_post_process.cpp  crt_post_process.hpp  debug_renderer.cpp  debug_renderer.hpp  gpu_debug_print_system.cpp  gpu_debug_print_system.hpp  graphics_asset_loaders.cpp  graphics_asset_loaders.hpp  graphics_blueprints.cpp  graphics_blueprints.hpp  render_system_interface.hpp  sprite_animation.cpp  sprite_animation.hpp  sprite_batch.cpp  sprite_batch.hpp  sprite_render_system.cpp  sprite_render_system.hpp
source/idra/imgui/: imgui_helpers.cpp  imgui_helpers.hpp  widgets.cpp  widgets.hpp
source/idra/kernel/: allocator.cpp  allocator.hpp  array.hpp  assert.hpp  asset.cpp  asset.hpp  bit.cpp  bit.hpp  blob.cpp  blob.hpp  camera.cpp  camera.hpp  color.cpp  color.hpp  file.cpp  file.hpp  hash_map.hpp  input.cpp  input.hpp  lexer.cpp  lexer.hpp  log.cpp  log.hpp  memory.cpp  memory.hpp  memory_hooks.hpp  numerics.cpp  numerics.hpp  platform.hpp  pool.cpp  pool.hpp  relative_data_structures.hpp  span.hpp  string.cpp  string.hpp  string_view.hpp  task_manager.cpp  task_manager.hpp  thread.cpp  thread.hpp  (+4 more)
source/tools/asset_compiler/: CMakeLists.txt  asset_compiler.cpp  asset_compiler.hpp
source/tools/shader_compiler/: CMakeLists.txt  shader_compiler.cpp  shader_compiler.hpp
source/tools/shader_compiler_cli/: CMakeLists.txt  main.cpp
